--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
         <div class="row align-items-center">
           <div class="col mb-3">
             <img src="/asets/images/istockphoto-954338790-612x612.jpg" class="w-100" alt="">
-            <h3>Enoy Moon </h3>
+            <h3 class="mt-1">Enoy Moon </h3>
           </div>
           <div class="col">
             <img src="/asets/images/istockphoto-1147998716-612x612.jpg" class="w-100" alt="">
-            <h1>fjhew</h1>
+            <h3 class="mt-1">Radam Click</h3>
           </div>
           <div class="col ">
             <img src="/asets/images/sea-7315960__340.jpg" class="w-100" alt="">
-            <h1> hunza</h1>
+            <h3 class="mt-1"> Hunza</h3>
           </div>
 
         </div>
