--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row justify-content-evenly">
             <div class="col-lg-3 mb-3">
                 <img src="/asets/images/istockphoto-954338790-612x612.jpg" class="w-100" alt="">
-                <h3 class="mt-1">Enoy Moon </h3>
+                <h3 class="mt-1">Enjoy Moon </h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis ad quod totam provident unde
                     eveniet obcaecati,quo ipsam!</p>
                 </div>
